Refactoring code to utilize server code generated by OpenAPI generator.
