# hatchery/openapi/api.go
@@ -1,0 +1,41 @@
+/*
+ * Hatchery API
+ *
+ * Workspace service for launching and interacting with containers.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"context"
+	"net/http"
+)
+
+
+
+// WorkspaceApiRouter defines the required methods for binding the api requests to a responses for the WorkspaceApi
+// The WorkspaceApiRouter implementation should parse necessary information from the http request, 
+// pass the data to a WorkspaceApiServicer to perform the required actions, then write the service results to the http response.
+type WorkspaceApiRouter interface { 
+	Launch(http.ResponseWriter, *http.Request)
+	Options(http.ResponseWriter, *http.Request)
+	Paymodels(http.ResponseWriter, *http.Request)
+	Status(http.ResponseWriter, *http.Request)
+	Terminate(http.ResponseWriter, *http.Request)
+}
+
+
+// WorkspaceApiServicer defines the api actions for the WorkspaceApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it, 
+// while the service implementation can ignored with the .openapi-generator-ignore file 
+// and updated with the logic required for the API.
+type WorkspaceApiServicer interface { 
+	Launch(context.Context, string, string, string) (ImplResponse, error)
+	Options(context.Context, string, string) (ImplResponse, error)
+	Paymodels(context.Context, string) (ImplResponse, error)
+	Status(context.Context, string, string) (ImplResponse, error)
+	Terminate(context.Context, string, string) (ImplResponse, error)
+}
