# hatchery/openapi/model_container.go
@@ -1,0 +1,42 @@
+/*
+ * Hatchery API
+ *
+ * Workspace service for launching and interacting with containers.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type Container struct {
+
+	// The display name for the container
+	Name string `json:"name,omitempty"`
+
+	// The CPU limit for the container
+	CpuLimit string `json:"cpu-limit,omitempty"`
+
+	// The memory limit for the container
+	MemoryLimit string `json:"memory-limit,omitempty"`
+
+	// The hash of the container, passed to /launch
+	Id string `json:"id,omitempty"`
+}
+
+// AssertContainerRequired checks if the required fields are not zero-ed
+func AssertContainerRequired(obj Container) error {
+	return nil
+}
+
+// AssertRecurseContainerRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of Container (e.g. [][]Container), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseContainerRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aContainer, ok := obj.(Container)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertContainerRequired(aContainer)
+	})
+}
