# hatchery/openapi/model_pod_condition.go
@@ -1,0 +1,36 @@
+/*
+ * Hatchery API
+ *
+ * Workspace service for launching and interacting with containers.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type PodCondition struct {
+
+	// Name of this Pod condition
+	Type string `json:"type,omitempty"`
+
+	// Indicates whether that condition is applicable
+	Status string `json:"status,omitempty"`
+}
+
+// AssertPodConditionRequired checks if the required fields are not zero-ed
+func AssertPodConditionRequired(obj PodCondition) error {
+	return nil
+}
+
+// AssertRecursePodConditionRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of PodCondition (e.g. [][]PodCondition), otherwise ErrTypeAssertionError is thrown.
+func AssertRecursePodConditionRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aPodCondition, ok := obj.(PodCondition)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertPodConditionRequired(aPodCondition)
+	})
+}
