# hatchery/openapi/model_service.go
@@ -1,0 +1,38 @@
+/*
+ * Hatchery API
+ *
+ * Workspace service for launching and interacting with containers.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type Service struct {
+
+	// External HTTP/HTTPS address where the service can be reached 
+	Url string `json:"url,omitempty"`
+
+	Status Status `json:"status,omitempty"`
+}
+
+// AssertServiceRequired checks if the required fields are not zero-ed
+func AssertServiceRequired(obj Service) error {
+	if err := AssertStatusRequired(obj.Status); err != nil {
+		return err
+	}
+	return nil
+}
+
+// AssertRecurseServiceRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of Service (e.g. [][]Service), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseServiceRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aService, ok := obj.(Service)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertServiceRequired(aService)
+	})
+}
