# openapi/hatchery.yaml
@@ -26,9 +26,15 @@ paths:
         schema:
           type: string
         description: The ID of the workspace to launch from the /options list.
+      - $ref: '#/components/parameters/User'
+      - $ref: '#/components/parameters/Authorization'
       responses:
         200:
           description: successfully started launching
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Status'
         401:
           $ref: '#/components/responses/UnauthorizedError'
   /terminate:
@@ -37,6 +43,9 @@ paths:
       - workspace
       summary: Terminate the actively running workspace
       operationId: terminate
+      parameters:
+      - $ref: '#/components/parameters/User'
+      - $ref: '#/components/parameters/Authorization'
       responses:
         200:
           description: successfully started terminating
@@ -48,13 +57,18 @@ paths:
       - workspace
       summary: Get the current status of the workspace
       operationId: status
+      parameters:
+      - $ref: '#/components/parameters/User'
+      - $ref: '#/components/parameters/Authorization'
       responses:
         200:
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Status'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Status'
         401:
           $ref: '#/components/responses/UnauthorizedError'
   /options:
@@ -63,6 +77,9 @@ paths:
       - workspace
       summary: Get the available workspace options that can be launched
       operationId: options
+      parameters:
+      - $ref: '#/components/parameters/User'
+      - $ref: '#/components/parameters/Authorization'
       responses:
         200:
           description: successful operation
@@ -74,7 +91,35 @@ paths:
                     $ref: '#/components/schemas/Container'
         401:
           $ref: '#/components/responses/UnauthorizedError'
+  /paymodels:
+    get:
+      tags:
+      - workspace
+      operationId: paymodels
+      parameters:
+      - $ref: '#/components/parameters/User'
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: '#/components/schemas/PayModel'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+
 components:
+  parameters:
+    User:
+      in: header
+      name: REMOTE_USER
+      schema:
+        type: string
+    Authorization:
+      in: header
+      name: Authorization
+      schema:
+        type: string
   schemas:
     Status:
       type: object
@@ -98,6 +143,15 @@ components:
           items:
             $ref: '#/components/schemas/ContainerState'
           description: The state of all the containers
+    Service:
+      type: object
+      properties:
+        url:
+          type: string
+          description: >
+            External HTTP/HTTPS address where the service can be reached
+        status:
+          $ref: '#/components/schemas/Status'
     Container:
       type: object
       properties:
@@ -119,20 +173,33 @@ components:
         type:
           type: string
           enum: [PodScheduled, Initialized, ContainersReady, Ready]
-          description: 	Name of this Pod condition
+          description: Name of this Pod condition
         status:
           type: string
           enum: ["True", "False", Unknown]
-          description: 	Indicates whether that condition is applicable
+          description: Indicates whether that condition is applicable
     ContainerState:
       type: object
       properties:
         name:
           type: string
-          description: 	Name of this container
+          description: Name of this container
         state:
           type: object
-          description: 	Details about the container's current condition
+          description: Details about the container's current condition
+    PayModel:
+      type: object
+      properties:
+        name:
+          type: string
+        user:
+          type: string
+        awsAccountId:
+          type: string
+        region:
+          type: string
+        ecs:
+          type: string
   responses:
     UnauthorizedError:
       description: Access token is missing or invalid
